# CW2_STOR609

./: Party_or_Relax.ipynb  README.md  gridworld.ipynb  pyproject.toml
CW2_STOR609/CW2_MDP/: gridworld_problem.py  party_or_relax.py  value_iteration.py
VIpackage/: __init__.py  value_iteration.py
example_files/.ipynb_checkpoints/: party_or_relax-checkpoint.py
test_VIpackage/: test_value_iteration.py
