[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "VIpackage"
version = "1"
maintainers = [
  { name="Sylwia Bathe-Taylor", email="s.bathe-taylor@lancaster.ac.uk"},
]
authors = [
  { name="Sylwia Bathe-Taylor", email="s.bathe-taylor@lancaster.ac.uk"},
]
description = "Implementation of the Value Iteration for MDPs, with example implementations"
requires-python = ">=3.13.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = ["pytest"]

[tool.setuptools]
packages = ["VIpackage"]
